# dvm-eagraph

./: .env.example  .gitignore  ADD.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/dvm_eagraph/: __init__.py  __main__.py  load_leanix.py  metamodel-mapping.yaml  seed.py
